--- a/weibo.sdk.android.sso.demo/AndroidManifest.xml
+++ b/weibo.sdk.android.sso.demo/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.weibo.sdk.android.demo"
     android:versionCode="1"
@@ -11,6 +12,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.WRITE_APN_SETTINGS" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -24,9 +26,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".APITypeListActivity"></activity>
-        <activity android:name="com.weibo.sdk.android.demo.ShareActivity"></activity>
-         <activity android:name="com.weibo.sdk.android.demo.BlogFunActivity"></activity>
+        <activity android:name="com.weibo.sdk.android.demo.APITypeListActivity" >
+        </activity>
+        <activity android:name="com.weibo.sdk.android.demo.ShareActivity" >
+        </activity>
+        <activity android:name="com.weibo.sdk.android.demo.BlogFunActivity" >
+        </activity>
+        <activity
+            android:name="com.weibo.sdk.android.demo.TestActivity"
+            android:label="@string/title_activity_test" >
+        </activity>
     </application>
 
 </manifest>
