--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name="om.weibo.sdk.android.util.MyApplication"
+        android:name="com.weibo.sdk.android.util.MyApplication"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
@@ -68,6 +68,10 @@
         <activity
             android:name="com.weibo.sdk.android.demo.MoreActivity"
             android:label="@string/title_activity_more" >
+        </activity>
+        <activity
+            android:name="com.weibo.sdk.android.demo.WriteWeiboActivity"
+            android:label="@string/title_activity_write_weibo" >
         </activity>
     </application>
 
