--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,9 +12,9 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.WRITE_APN_SETTINGS" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:name="com.weibo.sdk.android.util.MyApplication"
@@ -75,6 +75,22 @@
         <activity
             android:name="com.weibo.sdk.android.demo.WriteWeiboActivity"
             android:label="@string/title_activity_write_weibo" >
+        </activity>
+        <activity
+            android:name="com.weibo.sdk.android.demo.RepostActivity"
+            android:label="@string/title_activity_repost" >
+        </activity>
+        <activity
+            android:name="com.weibo.sdk.android.demo.CommentActivity"
+            android:label="@string/title_activity_comment" >
+        </activity>
+        <activity
+            android:name="com.weibo.sdk.android.demo.PersonDataActivity"
+            android:label="@string/title_activity_person_data" >
+        </activity>
+        <activity
+            android:name="com.weibo.sdk.android.demo.StatusDetailActivity"
+            android:label="@string/title_activity_status_detail" >
         </activity>
     </application>
 
