完成加载更多，微博详情部分组件

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -92,6 +92,10 @@
             android:name="com.weibo.sdk.android.demo.StatusDetailActivity"
             android:label="@string/title_activity_status_detail" >
         </activity>
+        <activity
+            android:name="com.weibo.sdk.android.demo.DetailActivity"
+            android:label="@string/title_activity_detail" >
+        </activity>
     </application>
 
 </manifest>
