关于@我、回复我的评论的实现，搜索界面布局还未完成、明天继续

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -116,6 +116,14 @@
             android:name="com.weibo.sdk.android.demo.UserWeiboActivity"
             android:label="@string/title_activity_user_weibo" >
         </activity>
+        <activity
+            android:name="com.weibo.sdk.android.demo.AtMeActivity"
+            android:label="@string/title_activity_at_me" >
+        </activity>
+        <activity
+            android:name="com.weibo.sdk.android.demo.CommentToMeActivity"
+            android:label="@string/title_activity_comment_about_me" >
+        </activity>
     </application>
 
 </manifest>
