--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,7 +33,8 @@
         </activity>
         <activity
             android:name="com.weibo.sdk.android.demo.LogoActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:launchMode="singleInstance" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -50,7 +51,8 @@
         </activity>
         <activity
             android:name="com.weibo.sdk.android.demo.MainTabActivity"
-            android:label="@string/title_activity_main" >
+            android:label="@string/title_activity_main" 
+            android:launchMode="singleTask">
         </activity>
         <activity
             android:name="com.weibo.sdk.android.demo.HomeActivity"
